@@ -32,6 +32,7 @@ Version 1.0.xxx (May xxth 2013)
 - Fixed: Switched tab, initial Push-On icon was set to off
 - Fixed: Windows installer now includes scripts folder
 - Fixed: Light Log graph, "Group Off" now seen as Off
+- Changed: meta viewport, removed device-width option
 
 Version 1.0.607 (May 11th 2013)
 - Changed: Rego6XX Type setting moved to the hardware settings in the same way as RFXtrx setup is done
